# morph-browser

./: .gitignore  CMakeLists.txt  README.md  clickable.json
debian/: morph-browser.install
po/: CMakeLists.txt  aa.po  am.po  ar.po  ast.po  az.po  be.po  bg.po  bn.po  br.po  bs.po  ca.po  ca@valencia.po  cs.po  cy.po  da.po  de.po  el.po  en_AU.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fr_CA.po  ga.po  gd.po  gl.po  he.po  hi.po  hr.po  hu.po  hy.po  ia.po  id.po  is.po  it.po  (+44 more)
src/: CMakeLists.txt
src/Morph/: CMakeLists.txt
src/Morph/Web/: MorphWebContext.qml
src/Ubuntu/: CMakeLists.txt
src/app/: CMakeLists.txt  DomainPermissionsPage.qml  DomainSettingsPage.qml  WebViewImpl.qml  ZoomControls.qml  browserapplication.cpp  browserapplication.h  single-instance-manager.cpp  url-utils.cpp  url-utils.h
src/app/webbrowser/: AddressBar.qml  Browser.qml  CMakeLists.txt  NavigationBar.qml  SettingsPage.qml  TabComponent.qml  TabsBar.qml  manifest.json.in  morph-browser.cpp  morph-browser.h  morph-browser.qml  onion-surf.apparmor  onion-surf.desktop.in.in  readability.js
src/app/webcontainer/: WebViewImplOxide.qml  WebappContainerWebview.qml
src/tor/: torrc
tests/unittests/: CMakeLists.txt
tests/unittests/qml/: CMakeLists.txt  tst_AddressBar.qml  tst_ChromeController.qml  tst_MorphWebView.qml  tst_PreviewManager.qml  tst_QmlTests.cpp  tst_UrlUtils.qml  tst_WebProcessMonitor.qml
tests/unittests/url-utils/: CMakeLists.txt  tst_UrlUtilsTests.cpp
